# nanowrimo-rs

./: .gitignore  Cargo.toml
src/: client.rs  data.rs  enums.rs  error.rs  kind.rs  lib.rs  utils.rs
src/client/: tests.rs
