[package]
name = "nanowrimo"
version = "0.3.0"
description = "Access to the NanoWrimo API, in all its forms"
keywords = ["nanowrimo", "api"]
repository = "https://github.com/passcod/nanowrimo-rs"
documentation = "https://docs.rs/nanowrimo"
authors = ["Rune Tynan <runetynan@gmail.com>", "Félix Saparelli <felix@passcod.name>"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
paste = "1.0.14"
reqwest = { version = "0.11.22", features = ["rustls-tls", "trust-dns", "json", "gzip", "brotli", "deflate"], default-features = false }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = { version = "1.0.108" }
serde_path_to_error = "0.1.14"
tokio = { version = "1.33.0", features = ["sync"] }
tracing = "0.1.40"
trust-dns-resolver = { version = "0.23.2", optional = true, default-features = false, features = ["dnssec-ring", "dns-over-rustls", "dns-over-https-rustls", "dns-over-quic"] }

[dev-dependencies]
tokio-test = "0.4.3"
